/*
 * $Id: ChangeLog,v 1.1582 2003/10/10 17:21:06 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-10-10 10:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbver.h
    * Signaled as "Build-91" and updated last change log to this entry.

2003-10-10 11:08 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  - dll_55.bat

2003-10-10 08:50 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.vc
  * makefile.nt
  * contrib/htmllib/makefile.vc
  * contrib/internet/makefile.vc
  * contrib/libct/makefile.vc
  * contrib/libmisc/makefile.vc
  * contrib/libnf/makefile.vc
  * contrib/mysql/makefile.vc
  * contrib/tip/makefile.vc
  * contrib/what32/makefile.nt
  * contrib/what32/makefile.vc
  * contrib/whoo/makefile.nt
  * contrib/whoo/makefile.vc
  * contrib/woopgui/makefile.nt
  * contrib/woopgui/makefile.vc
  * contrib/xwt/makefile.nt
  * contrib/xwt/makefile.vc
    * obj to prg dependance improved (really, I mean it...)
  * contrib/xwt/makefile.nt
  * contrib/xwt/makefile.vc
    + src/xwt_win/xwt_win.c
    + src/xwt_win/xwt_win_framewnd.c
    + src/xwt_win/xwt_win_msgbox.c
  * contrib/xwt/makefile.bc
    * minor change to del command
  * contrib/xwt/make_vc.bat
    - gtk message

2003-10-09 10:10 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * utils/hbmake/hbmake.prg
    ! just an little rename on lib name to link dll(was hbdll_[vc|bc] to harbour

2003-10-09 23:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrayshb.c
    ! Fixed minor bug with aAdd(), aIns(), aDel(), aSize(), aCopy(), aFill(), aEval() when params were passed BYREF.
      the passed value would be lost when it is also the return value of the function. (Reported by Brian Hays.)

  /*
     For aAdd() and aIns() I believe that the correct fix is to actually add the item BYREF as is the case with:

      aVar := { @VarByRef }
